--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: CI demo
 on: [push]
 jobs:
     build:
-        runs-on: ububtu-latest
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
             - name: Install Python
