--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 name: CI demo
-on: [push]
+on:
+  push: 
+    branches:
+       [stage]
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -15,4 +18,12 @@ jobs:
               run: make lint
             - name: Pytest
               run: make test
+    load_test:
+        runs-on: ubuntu-latest
+        needs: build
+        steps:
+            - uses: actions/checkout@v2
+            - name: Run Load Test with Locust
+              run: locust -f locustfile.py --headless -u 20 -r 5 --runtime 1m --host=https://localhost:5000/add?x=3&y=8 
+
                 
