--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
         needs: build
         steps:
             - uses: actions/checkout@v2
+            - name: Install Python
+              uses: actions/setup-python@v1
+              with:
+                python-version: 3.10.14
             - name: Run Load Test with Locust
               run: locust -f locustfile.py --headless -u 20 -r 5 --runtime 1m --host=https://localhost:5000/add?x=3&y=8 
 
