--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,6 @@ jobs:
             - name: Install locust
               run: pip install locust
             - name: Run Load Test with Locust
-              run: locust -f locustfile.py --headless -u 20 -r 5 --runtime 1m --host=https://localhost:5000/add?x=3&y=8 --exit-code-on-error 1
+              run: locust -f locustfile.py --headless -u 20 -r 5 --run-time 1m --host=https://localhost:5000/add?x=3&y=8 --exit-code-on-error 1
 
                 
